test/expected/cli/bash_mood_fatal_exit_status.out
== a bash-mood set -u abort exits 1 like a bash script, not 127 ==
shit: setu.sh:2:7: error: Unable to expand 'undefined_variable' because the parameter is not set.
     2 |  echo "$undefined_variable"
       |        ^~~~~~~~~~~~~~~~~~~ here.
note: Replace it with ${undefined_variable-} if empty expansion is desired.
rc=1
== a bash-mood ${name:?} abort exits 1 like a bash script ==
shit: report.sh:1:6: error: is gone.
     1 |  echo "${missing:?is gone}"
       |       ^~~~~~~~~~~~~~~~~~~~~ here.
rc=1
